--- a/MachineLearning/index.html
+++ b/MachineLearning/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
 </head>
 <body>
-    <img src="./mangga.jpg" id="image" alt="">
+    <img src="./src/images/botol.jpeg" id="image" alt="">
     <script src="app.js"></script>
     <script>
         
